fix layout shift

--- a/src/about/About.css
+++ b/src/about/About.css
@@ -132,6 +132,7 @@
 
     img {
       width: 100%;
+      height: auto;
     }
 
     small {
@@ -179,6 +180,7 @@
 
     img {
       width: 30%;
+      height: auto;
     }
 
     small {
